@@ -131,7 +131,6 @@
     <Compile Include="Package\PackageListResourceFile.cs" />
     <Compile Include="Package\PackageMetaData.cs" />
     <Compile Include="Package\PackageUtilities.cs" />
-    <Compile Include="Package\XmlResolver.cs" />
     <Compile Include="PathKey.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="PreBuiltTool.cs" />
