@@ -1,3 +1,5 @@
+10-Apr-2016 Fixes #213. Removed Bam.Core.XmlResolver class. It was only used to resolve the relative pathname to the schema, which can be specified on the XmlReaderSettings in a much simpler way. Also resolves a resource leak identified by a Coverity scan.
+
 10-Apr-2016 Fixes #212. Wrapped System.Threading.CancellationTokenSource in a using block to fix the resource leak identified by a Coverity scan.
 
 10-Apr-2016 Fixes #210. Add support in make_release.py to generate a build using the Coverity static analysis tools.
